# Choose-for-me

./: .env.example  .gitignore  README.md  app.py  database.py  debug_api.py  fix_database_schema.py  main.py  media_picker.db-shm  migrate_to_new_structure.py  migration.py  models.py  pyproject.toml
.github/workflows/: ci.yml
data/: media_picker.db-shm  media_picker.db-wal
documentation/: ARCHITECTURE.md  REFACTORING_SUMMARY.md  RUFF_FIXES_SUMMARY.md
scripts/: SCRIPTS.md  migrate_to_new_structure.py  migration.py  run_checks.py
src/media_picker/: __init__.py
src/media_picker/api/: dependencies.py  exception_handlers.py  media.py
src/media_picker/core/: config.py  exceptions.py  logging.py
src/media_picker/db/: database.py  models.py  repository.py
src/media_picker/schemas/: base.py  media.py
src/media_picker/services/: media_service.py
static/: app.js  styles.css
templates/: index.html
tests/: test_api.py  test_exceptions.py  test_models.py  test_repository.py  test_schemas.py  test_services.py
